--- a/main/.env
+++ b/main/.env
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=a0d7PUszBJdIfj5aZ944b9htGPfh2d52Ah8x8aO4EAQ=
+APP_KEY=base64:RmqafMmHm7oBb3AM3yIIUerMsec6vshVas1hgW4aEkM=
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
