--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,6 @@
 APP_ENV=local
-APP_DEBUG=true
-APP_KEY=a0d7PUszBJdIfj5aZ944b9htGPfh2d52Ah8x8aO4EAQ=
+APP_DEBUG=false
+APP_KEY=base64:RmqafMmHm7oBb3AM3yIIUerMsec6vshVas1hgW4aEkM=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
