--- a/system/.env
+++ b/system/.env
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=base64:RmqafMmHm7oBb3AM3yIIUerMsec6vshVas1hgW4aEkM=
-APP_URL=http://iats.app
+API_URL=api.iats.app
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
