--- a/system/composer.json
+++ b/system/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "laravelcollective/html":"^5.2.0",
-        "intervention/image":"2.*"
+        "intervention/image":"2.*",
+        "fzaninotto/faker": "~1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
