--- a/system/composer.json
+++ b/system/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "laravelcollective/html":"^5.2.0",
         "intervention/image":"2.*",
-        "fzaninotto/faker": "~1.4"
+        "fzaninotto/faker": "~1.4",
+        "brozot/laravel-fcm": "^1.2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
